Fix UI for grid and PEF

--- a/src/Resources/public/templates/product/field/text-collection.html
+++ b/src/Resources/public/templates/product/field/text-collection.html
@@ -25,12 +25,10 @@
         <% if (editMode !== 'view') { %>
         <tr>
             <td></td>
-            <td><input type="text"
-                       class="AknTextField AknTextCollection-newItem"
-            /></td>
-            <td class="AknTextCollection-actions"><button
-                    class="AknButton AknButton--small AknTextCollection-addButton"
-            >Add item</button></td>
+            <td></td>
+            <td class="AknTextCollection-actions">
+                <button class="AknButton AknButton--small AknTextCollection-addButton">Add item</button>
+            </td>
         </tr>
         <% } %>
         </tbody>
